WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315459
[GStreamer] Possible pipeline leak when the owning media element id is updated
https://bugs.webkit.org/show_bug.cgi?id=315459
Summary
[GStreamer] Possible pipeline leak when the owning media element id is updated
Philippe Normand
Reported
2026-05-24 08:16:23 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2026-05-24 08:22:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65567
EWS
Comment 2
2026-05-25 01:39:59 PDT
Committed
313830@main
(cb7ccd0d2919): <
https://commits.webkit.org/313830@main
> Reviewed commits have been landed. Closing PR #65567 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-05-25 01:40:12 PDT
<
rdar://problem/177863433
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug