[GStreamer] Possible pipeline leak when the owning media element id is updated https://bugs.webkit.org/show_bug.cgi?id=315459

Reviewed by Xabier Rodriguez-Calvar.

Keep track of the initial player pipeline name and use it for storage in the global pipelines
hashmap.

Driving-by, clean-up some more GstElement smart pointers during tear-down and avoid one string copy
when logging media element id updates.

* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::registerActivePipeline):
(WebCore::unregisterPipeline):
* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h:
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::tearDown):
(WebCore::MediaPlayerPrivateGStreamer::elementIdChanged const):
(WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/313830@main