Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h
@@ -419,6 +419,8 @@ protected:
     GRefPtr<GstElement> m_pipeline;
     IntSize m_size;
 
+    String m_originalPipelineName;
+
     MediaPlayer::ReadyState m_readyState { MediaPlayer::ReadyState::HaveNothing };
     mutable MediaPlayer::NetworkState m_networkState { MediaPlayer::NetworkState::Empty };
 
